# plct

./: files  ros_package.md
AgibotTech/: install.md
BEV/: bev.md
CAR/: connecting.md
CAR/newfeatures/: face_recognition.md  gesture_recognition.md
CAR/newfeatures/face_recognition_ros/face/: setup.cfg  setup.py
CAR/newfeatures/face_recognition_ros/face/install/: local_setup.sh  setup.sh
CAR/newfeatures/face_recognition_ros/face/install/face/lib/face/: face
CAR/newfeatures/face_recognition_ros/face/install/face/share/face/: package.bash  package.dsv  (+4 more)
CAR/newfeatures/face_recognition_ros/face/resource/: candidates.npy  face_detector.py  this_is_who_camera.py
CAR/newfeatures/peopke_detect_ros/person_detect/: setup.py
CAR/newfeatures/peopke_detect_ros/person_detect/scripts/: person_detect.py
CAR/newfeatures/peopke_detect_ros/person_detect/scripts/haarshare/: haarcascade_frontalcatface_extended.xml  lbpcascade_frontalcatface.xml
CAR/newfeatures/people_detect_ros/person_detect/: CMakeLists.txt  package.xml
CAR/newfeatures/people_detect_ros/person_detect/launch/: person_detect.launch
RL/: demo1.py  demo2.py  demo3.py  mujoco.md
Task12/: ARM.md  ARM测试.md
Task13/: become_contributor.md
Task14/: broken_packages.md
Task19/: ATSA.pptx  RGMP_ROS.pptx
Task34/: 1.md  2.md  index.md
Task35/: 1.md  2.md  3.md  4.md  index.md
Task55/: 3DVLA.pptx
Task62/: install.md  report.md  requirements.txt
intertask1/: ARM_test.md  x86_test.md
navigtion2/: gazebo_launch.py  start.md
slam_gmapping/: slam_gmapping.md
stage/: install.md  stage_ros.md
